objects/Account.object
<CustomObject>
    <fields>
        <fullName>Base_Name__c</fullName>
        <label>Base Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migrated_At__c</fullName>
        <description>Time at which this object was migrated</description>
        <label>Migrated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preserve_After_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this object should not be wiped as part of the migration.</description>
        <label>Preserve After Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shift_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Shift Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sked__Rank__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The rank of the account wrt business impact if they are not looked after</description>
        <label>Rank</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Requires_Whitelist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Whitelist</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Migrated_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migration_Tree_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Migrated Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>